Working prototype of fetch, sync and batch operations

--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,12 @@
 {
   "name": "Hubspot",
   "description": "Sync a Hubspot Channel whenever a User enters or leaves a Segment",
-  "tags": ["outgoing", "oneColumn"],
+  "tags": ["outgoing", "incoming", "batch", "oneColumn"],
   "admin" : "/auth/",
   "picture": "picture.png",
   "version": "0.0.1",
   "settings": [],
-  "private_settings":[ 
+  "private_settings":[
     {
       "name": "synchronized_segments",
       "title": "Segments",
