--- a/package.json
+++ b/package.json
@@ -60,16 +60,28 @@
     "watch": "^0.19.1"
   },
   "dependencies": {
+    "JSONStream": "^1.1.4",
+    "batch-stream": "^0.1.3",
+    "bluebird": "^3.4.3",
+    "body-parser": "^1.15.2",
+    "csv-stream": "^0.1.3",
     "dotenv": "^2.0.0",
     "ejs": "^2.5.1",
     "express": "^4.14.0",
     "hubspot": "unity/node-hubspot",
     "hull": "0.9.6",
+    "kue": "^0.11.1",
     "lodash": "^4.14.2",
     "moment": "^2.14.1",
     "newrelic": "^1.29.0",
     "passport-hubspot": "unity/passport-hubspot",
+    "promise-streams": "^1.0.1",
     "rimraf": "^2.5.4",
+    "superagent": "^2.2.0",
+    "superagent-prefix": "0.0.2",
+    "superagent-promise-plugin": "^3.2.0",
+    "superagent-use": "0.0.1",
+    "supply": "0.0.4",
     "winston-logstash": "^0.2.11",
     "winston-logzio": "^1.0.0"
   }
