--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "newrelic": "^1.29.0",
     "passport-hubspot": "unity/passport-hubspot",
     "promise-streams": "^1.0.1",
+    "request": "^2.74.0",
     "rimraf": "^2.5.4",
     "superagent": "^2.2.0",
     "superagent-prefix": "0.0.2",
