--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "test:modules": "npm outdated --depth=0",
     "clean": "./node_modules/.bin/rimraf dist; ./node_modules/.bin/rimraf lib",
     "update": "./node_modules/.bin/updtr",
-    "watch": "./node_modules/.bin/watch 'clear && npm run test:lint -s && npm run test:units -s' server src",
+    "watch": "babel-watch -L src/index.js",
     "postinstall": "npm run build"
   },
   "keywords": [
@@ -45,13 +45,14 @@
     "hubspot"
   ],
   "devDependencies": {
+    "babel-cli": "^6.11.4",
     "babel-core": "^6.13.2",
     "babel-eslint": "^6.1.2",
     "babel-jest": "^14.1.0",
-    "babel-cli": "^6.11.4",
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.11.6",
+    "babel-watch": "^2.0.2",
     "eslint": "^3.2.2",
     "eslint-config-airbnb-base": "^5.0.1",
     "eslint-plugin-import": "^1.12.0",
