--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "start": "node ./lib",
     "start:dev": "NODE_ENV=development ./node_modules/.bin/nodemon -V -w server -x ./node_modules/.bin/babel-node -- server",
     "test": "npm run test:lint && npm run test:modules",
-    "test:lint": "./node_modules/.bin/eslint server",
+    "test:lint": "eslint src",
     "test:modules": "npm outdated --depth=0",
     "clean": "./node_modules/.bin/rimraf dist; ./node_modules/.bin/rimraf lib",
     "update": "./node_modules/.bin/updtr",
