--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     watch:
         image: node:5
         env_file: .env
-        entrypoint: npm run start:dev
+        entrypoint: npm run watch
         working_dir: /app
         ports:
             - "8082:8082"
