--- a/manifest.json
+++ b/manifest.json
@@ -49,5 +49,17 @@
     {
       "url": "/notify"
     }
-  ]
+  ],
+  "schedules": [
+    {
+      "url": "/sync",
+      "type": "cron",
+      "value": "0 0 * * *"
+    },
+    {
+      "url": "/monitor/checkToken",
+      "type": "cron",
+      "value": "0 * * * *"
+    }
+ ]
 }
