--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "scripts": {
     "build": "npm run clean && npm run build:server",
     "build:server": "./node_modules/.bin/babel server -d lib",
-    "start": "node ./lib",
+    "start": "node ./lib/web",
     "start:dev": "NODE_ENV=development ./node_modules/.bin/nodemon -V -w server -x ./node_modules/.bin/babel-node -- server",
     "test": "npm run test:lint && npm run test:modules",
     "test:lint": "eslint server",
