--- a/package.json
+++ b/package.json
@@ -23,13 +23,13 @@
   },
   "scripts": {
     "build": "npm run clean && npm run build:server",
-    "build:server": "./node_modules/.bin/babel server -d lib",
-    "start": "node ./lib/web",
+    "build:server": "./node_modules/.bin/babel server -d build",
+    "start": "node ./build/web",
     "start:dev": "NODE_ENV=development ./node_modules/.bin/nodemon -V -w server -x ./node_modules/.bin/babel-node -- server",
     "test": "npm run test:lint && npm run test:modules",
     "test:lint": "eslint server",
     "test:modules": "npm outdated --depth=0",
-    "clean": "./node_modules/.bin/rimraf dist; ./node_modules/.bin/rimraf lib",
+    "clean": "./node_modules/.bin/rimraf dist; ./node_modules/.bin/rimraf build",
     "update": "./node_modules/.bin/updtr",
     "watch:queue": "babel-watch -L server/queue.js",
     "watch:web": "babel-watch -L server/web.js",
