Run the sync every 5 minutes

--- a/manifest.json
+++ b/manifest.json
@@ -54,7 +54,7 @@
     {
       "url": "/sync",
       "type": "cron",
-      "value": "0 0 * * *"
+      "value": "*/5 * * * *"
     },
     {
       "url": "/monitor/checkToken",
