--- a/manifest.json
+++ b/manifest.json
@@ -16,13 +16,6 @@
       "format": "segment"
     },
     {
-      "name"        : "traits",
-      "title"       : "Synchronized Properties",
-      "description" : "Synchronize these properties to Hubspot",
-      "type"        : "array",
-      "format"      : "trait"
-    },
-    {
       "name": "token",
       "title": "Token",
       "type": "string",
@@ -38,6 +31,24 @@
       "name": "refresh_token",
       "title": "RefreshToken",
       "type": "string",
+      "format": "hidden"
+    },
+    {
+      "name": "last_fetch_started_at",
+      "description": "Last time fetched at operation was started",
+      "type": "string",
+      "format": "hidden"
+    },
+    {
+      "name": "fetch_count",
+      "description": "Count of contacts already fetched from Hubspot",
+      "type": "number",
+      "format": "hidden"
+    },
+    {
+      "name": "is_fetch_completed",
+      "type": "boolean",
+      "default": false,
       "format": "hidden"
     }
   ],
