--- a/package.json
+++ b/package.json
@@ -56,16 +56,17 @@
     "watch": "^0.19.1"
   },
   "dependencies": {
+    "JSONStream": "^1.1.4",
     "babel-cli": "^6.11.4",
     "babel-core": "^6.13.2",
     "babel-eslint": "^6.1.2",
     "babel-jest": "^14.1.0",
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-stage-0": "^6.5.0",
-    "JSONStream": "^1.1.4",
     "batch-stream": "^0.1.3",
     "bluebird": "^3.4.3",
     "body-parser": "^1.15.2",
+    "connect": "^3.4.1",
     "csv-stream": "^0.1.3",
     "dotenv": "^2.0.0",
     "ejs": "^2.5.1",
@@ -79,13 +80,16 @@
     "newrelic": "^1.29.0",
     "passport-hubspot": "unity/passport-hubspot",
     "promise-streams": "^1.0.1",
+    "raw-body": "^2.1.7",
     "request": "^2.74.0",
     "rimraf": "^2.5.4",
+    "sns-validator": "^0.2.1",
     "superagent": "^2.2.0",
     "superagent-prefix": "0.0.2",
     "superagent-promise-plugin": "^3.2.0",
     "superagent-use": "0.0.1",
     "supply": "0.0.4",
+    "urijs": "^1.18.1",
     "winston-logstash": "^0.2.11",
     "winston-logzio": "^1.0.0"
   }
