Adjust package lifecycle scripts

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,20 +9,20 @@ services:
             - "8082:8082"
         volumes:
             - .:/app
-    watch-queue:
+    dev:
         image: node:5
         env_file: .env
-        entrypoint: npm run watch:queue
+        entrypoint: npm run start:dev
+        ports:
+            - "8082:8082"
         working_dir: /app
         volumes:
             - .:/app
-    watch-web:
+    install:
         image: node:5
         env_file: .env
-        entrypoint: npm run watch:web
+        command: npm install
         working_dir: /app
-        ports:
-            - "8082:8082"
         volumes:
             - .:/app
     redis:
