--- a/package.json
+++ b/package.json
@@ -24,15 +24,13 @@
   "scripts": {
     "build": "npm run clean && npm run build:server",
     "build:server": "./node_modules/.bin/babel server -d build",
-    "start": "node ./build/web",
-    "start:dev": "NODE_ENV=development ./node_modules/.bin/nodemon -V -w server -x ./node_modules/.bin/babel-node -- server",
+    "start": "./node_modules/.bin/nf start",
+    "start:dev": "./node_modules/.bin/nf -j Procfile.dev start",
     "test": "npm run test:lint && npm run test:modules",
     "test:lint": "eslint server",
     "test:modules": "npm outdated --depth=0",
     "clean": "./node_modules/.bin/rimraf dist; ./node_modules/.bin/rimraf build",
     "update": "./node_modules/.bin/updtr",
-    "watch:queue": "babel-watch -L server/queue.js",
-    "watch:web": "babel-watch -L server/web.js",
     "postinstall": "npm run build"
   },
   "keywords": [
@@ -51,9 +49,7 @@
     "eslint": "^3.2.2",
     "eslint-config-airbnb-base": "^5.0.1",
     "eslint-plugin-import": "^1.12.0",
-    "nodemon": "^1.10.0",
-    "updtr": "^0.2.1",
-    "watch": "^0.19.1"
+    "updtr": "^0.2.1"
   },
   "dependencies": {
     "JSONStream": "^1.1.4",
