--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "newrelic": "^1.29.0",
     "passport-hubspot": "unity/passport-hubspot",
     "promise-streams": "^1.0.1",
+    "raven": "^0.12.1",
     "raw-body": "^2.1.7",
     "request": "^2.74.0",
     "rimraf": "^2.5.4",
