--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "bluebird": "^3.4.3",
     "body-parser": "^1.15.2",
     "connect": "^3.4.1",
+    "connect-timeout": "^1.7.0",
     "csv-stream": "^0.1.3",
     "dotenv": "^2.0.0",
     "ejs": "^2.5.1",
