--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
     "hubspot"
   ],
   "devDependencies": {
-    "babel-register": "^6.11.6",
     "babel-watch": "^2.0.2",
     "eslint": "^3.2.2",
     "eslint-config-airbnb-base": "^5.0.1",
@@ -56,22 +55,19 @@
     "babel-cli": "^6.11.4",
     "babel-core": "^6.13.2",
     "babel-eslint": "^6.1.2",
-    "babel-jest": "^14.1.0",
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-stage-0": "^6.5.0",
     "batch-stream": "^0.1.3",
     "bluebird": "^3.4.3",
     "body-parser": "^1.15.2",
+    "cache-manager": "^2.1.2",
     "connect": "^3.4.1",
     "connect-timeout": "^1.7.0",
     "csv-stream": "^0.1.3",
-    "dotenv": "^2.0.0",
     "ejs": "^2.5.1",
     "express": "^4.14.0",
     "foreman": "^2.0.0",
-    "hubspot": "unity/node-hubspot",
     "hull": "0.9.6",
-    "jwt-simple": "^0.5.0",
     "kue": "^0.11.1",
     "lodash": "^4.14.2",
     "moment": "^2.14.1",
@@ -86,10 +82,7 @@
     "superagent": "^2.2.0",
     "superagent-prefix": "0.0.2",
     "superagent-promise-plugin": "^3.2.0",
-    "superagent-use": "0.0.1",
     "supply": "0.0.4",
-    "urijs": "^1.18.1",
-    "winston-logstash": "^0.2.11",
-    "winston-logzio": "^1.0.0"
+    "urijs": "^1.18.1"
   }
 }
