--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "moment": "^2.14.1",
     "newrelic": "^1.29.0",
     "passport-hubspot": "unity/passport-hubspot",
+    "promise-retry": "^1.1.1",
     "promise-streams": "^1.0.1",
     "raven": "^0.12.1",
     "raw-body": "^2.1.7",
