Adds redis addon to heroku button

--- a/app.json
+++ b/app.json
@@ -28,5 +28,11 @@
       "required": true
     }
   },
-  "scripts": {}
+  "scripts": {},
+  "addons": [
+    {
+      "plan": "heroku-redis:hobby-dev",
+      "as": "REDIS"
+    }
+  ]
 }
