Make logstash options optional

--- a/app.json
+++ b/app.json
@@ -14,10 +14,12 @@
       "value": "info"
     },
     "LOGSTASH_PORT" : {
-      "description" : "Logstash Port"
+      "description" : "Logstash Port",
+      "required": false
     },
     "LOGSTASH_HOST" : {
-      "description" : "Logstash Host"
+      "description" : "Logstash Host",
+      "required": false
     },
     "CLIENT_ID" : {
       "description" : "oAuth Client ID",
