Updates the hull-node and add logentries addon on heroku

--- a/app.json
+++ b/app.json
@@ -35,6 +35,10 @@
     {
       "plan": "heroku-redis:hobby-dev",
       "as": "REDIS"
+    },
+    {
+      "plan": "logentries:le_tryit",
+      "as": "LOGENTRIES"
     }
   ]
 }
