Locks the hubspot properties update and adds librato metrics

--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "foreman": "^2.0.0",
     "hull": "0.10.1",
     "kue": "^0.11.1",
+    "librato-node": "^4.1.0",
     "lodash": "^4.14.2",
     "moment": "^2.14.1",
     "newrelic": "^1.29.0",
