--- a/.env.sample
+++ b/.env.sample
@@ -8,3 +8,6 @@ SENTRY_URL=
 # number of seconds before the expiry date the access_token refreshing endpoint will
 # refresh the token, should take into account the checking scheduler interval
 HUBSPOT_TOKEN_REFRESH_ADVANCE
+
+LIBRATO_USER
+LIBRATO_TOKEN
