--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "babel-eslint": "^6.1.2",
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-stage-0": "^6.5.0",
+    "basic-auth": "^1.0.4",
     "batch-stream": "^0.1.3",
     "bluebird": "^3.4.3",
     "body-parser": "^1.15.2",
@@ -69,6 +70,7 @@
     "foreman": "^2.0.0",
     "hull": "0.10.1",
     "kue": "^0.11.1",
+    "kue-ui": "^0.1.0",
     "librato-node": "^4.1.0",
     "lodash": "^4.14.2",
     "moment": "^2.14.1",
