checkToken less often

--- a/manifest.json
+++ b/manifest.json
@@ -107,7 +107,7 @@
     {
       "url": "/monitor/checkToken",
       "type": "cron",
-      "value": "0 * * * *"
+      "value": "*/5 * * * *"
     }
   ]
 }
